# One-Shot-Template-Detector-based-on-Keypoints

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  application.cpp  application.h  main.cpp
fginn/: fginn.cpp  fginn.h
frame_sources/: frame_handler.h  frame_source.h  frame_source_factory.cpp  frame_source_factory.h
frame_sources/video/: video.cpp  video.h  video_factory.cpp  video_factory.h
one_shot_detector/: detector.cpp  detector.h  factory.h
one_shot_detector/orb/: orb_detector.h
one_shot_detector/orb/cpu/: detector_orb_cpu.cpp  detector_orb_cpu.h  factory_orb_cpu.h
one_shot_detector/sift/: sift_detector.h
one_shot_detector/sift/cpu/: detector_sift_cpu.cpp  detector_sift_cpu.h  factory_sift_cpu.h
settings/: detector.json  frame_source.json  main_settings.json
tests/: tests.cpp
tests/data/: desc1.txt  km2.txt  kps1.txt  kps2.txt  m1.txt  m2.txt
